@@ -257,10 +257,7 @@ Pagar (GtkWidget *widget, gpointer data)
           gtk_tree_store_clear (pagos_store);
 
 
-          if (strcmp (rut_proveedor, "") != 0)
-            FillPagarFacturas (rut_proveedor);
-          else
-            FillPagarFacturas (NULL);
+          if (strcmp (rut_proveedor, "") != 0) FillPagarFacturas (rut_proveedor);
         }
 
     }
@@ -726,7 +723,7 @@ compras_win ()
   treeview = GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_pending_requests"));
   gtk_tree_view_set_model (GTK_TREE_VIEW (treeview), GTK_TREE_MODEL (store));
 
-  selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (treeview));
+  selection = gtk_tree_view_get_selection (treeview);
 
   gtk_tree_selection_set_mode (selection, GTK_SELECTION_SINGLE);
 
@@ -1023,6 +1020,150 @@ compras_win ()
   gtk_tree_view_column_set_cell_data_func (column, renderer, control_decimal, (gpointer)4, NULL);
 
   /* End Guide -> Invoice */
+
+  /* Pay Invoices */
+
+  store = gtk_list_store_new (7,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING);
+
+  treeview = GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_invoice_list"));
+  gtk_tree_view_set_model (GTK_TREE_VIEW (treeview), GTK_TREE_MODEL (store));
+
+  selection = gtk_tree_view_get_selection (treeview);
+
+  gtk_tree_selection_set_mode (selection, GTK_SELECTION_SINGLE);
+
+  g_signal_connect (G_OBJECT (selection), "changed",
+                    G_CALLBACK (on_tree_view_invoice_list_selection_changed), NULL);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("ID", renderer,
+                                                     "text", 0,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Rut", renderer,
+                                                     "text", 1,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Numero", renderer,
+                                                     "text", 2,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Compra", renderer,
+                                                     "text", 3,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("F. Emision", renderer,
+                                                     "text", 4,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Fecha Pagos", renderer,
+                                                     "text", 5,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Monto", renderer,
+                                                     "text", 6,
+                                                     NULL);
+  gtk_tree_view_append_column (treeview, column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  store = gtk_list_store_new (5,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_STRING,
+                              G_TYPE_DOUBLE,
+                              G_TYPE_DOUBLE);
+
+  treeview = GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_invoice_detail"));
+  gtk_tree_view_set_model (GTK_TREE_VIEW (treeview), GTK_TREE_MODEL (store));
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Codigo", renderer,
+                                                     "text", 0,
+                                                     NULL);
+  gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Producto", renderer,
+                                                     "text", 1,
+                                                     NULL);
+  gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Unit.", renderer,
+                                                     "text", 2,
+                                                     NULL);
+  gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Cant.", renderer,
+                                                     "text", 3,
+                                                     NULL);
+  gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  gtk_tree_view_column_set_cell_data_func (column, renderer, control_decimal, (gpointer)3, NULL);
+
+  renderer = gtk_cell_renderer_text_new ();
+  column = gtk_tree_view_column_new_with_attributes ("Sub-Total", renderer,
+                                                     "text", 4,
+                                                     NULL);
+  gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+  gtk_tree_view_column_set_alignment (column, 0.5);
+  g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+  gtk_tree_view_column_set_resizable (column, FALSE);
+
+  gtk_tree_view_column_set_cell_data_func (column, renderer, control_decimal, (gpointer)4, NULL);
+
+  /* End Pay Invoices */
 
   //mercaderia
   admini_box();
@@ -2199,11 +2340,10 @@ InsertarCompras (void)
 }
 
 void
-IngresoDetalle (GtkTreeSelection *selection1, gpointer data)
+IngresoDetalle (GtkTreeSelection *selection, gpointer data)
 {
   gint i, id, tuples;
   gboolean color;
-  GtkTreeSelection *selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_pending_requests")));
   GtkTreeIter iter;
 
   GtkListStore *store_pending_request = GTK_LIST_STORE (gtk_tree_view_get_model (GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_pending_requests"))));
@@ -3098,105 +3238,37 @@ CheckDocumentData (gboolean invoice, gchar *rut_proveedor, gint id)
 void
 FillPagarFacturas (gchar *rut_proveedor)
 {
-  gint tuples, tuples2, i, j;
-  gint year = 0, month = 0, day = 0;
-  gint monto_fecha = 0;
-  GtkTreeIter fecha_iter, factura_iter, guia_iter;
+  gchar *q;
+  gint tuples, i;
+  GtkListStore *store_invoice = GTK_LIST_STORE (gtk_tree_view_get_model (GTK_TREE_VIEW (builder_get (builder, "tree_view_invoice_list"))));
+  GtkTreeIter iter;
 
-  PGresult *res, *res2;
+  PGresult *res;
 
-  if (rut_proveedor != NULL)
-    res = EjecutarSQL
-      (g_strdup_printf
-       ("SELECT t1.id, t1.num_factura, t1.monto, date_part ('day', t1.fecha), date_part('month', t1.fecha), date_part('year', t1.fecha), t1.id_compra, date_part ('day', fecha_pago) AS pay_day, date_part ('month', fecha_pago) AS pay_month, date_part ('year', fecha_pago) AS pay_year, t1.forma_pago, t1.id, t1.rut_proveedor FROM factura_compra AS t1 WHERE t1.rut_proveedor='%s' AND t1.pagada='f' ORDER BY pay_year, pay_month, pay_day ASC", rut_proveedor));
-  else
-    res = EjecutarSQL
-      ("SELECT t1.id, t1.num_factura, t1.monto, date_part ('day', t1.fecha), date_part('month', t1.fecha), date_part('year', t1.fecha), t1.id_compra, date_part ('day', fecha_pago) AS pay_day, date_part ('month', fecha_pago) AS pay_month, date_part ('year', fecha_pago) AS pay_year, t1.forma_pago, t1.id, t1.rut_proveedor FROM factura_compra AS t1 WHERE pagada='f' ORDER BY pay_year, pay_month, pay_day ASC");
+  if (rut_proveedor == NULL) return;
 
-  if (res == NULL)
-    return;
+  q = g_strdup_printf ("SELECT t1.id, t1.num_factura, t1.monto, date_part ('day', t1.fecha) as dia, date_part('month', t1.fecha) as mes, date_part('year', t1.fecha) as ano, t1.id_compra, date_part ('day', fecha_pago) AS pay_day, date_part ('month', fecha_pago) AS pay_month, date_part ('year', fecha_pago) AS pay_year, t2.nombre, t1.id, t1.rut_proveedor FROM factura_compra AS t1, formas_pago as t2 WHERE t1.rut_proveedor='%s' AND t1.pagada='f' and t2.id = t1.forma_pago ORDER BY pay_year, pay_month, pay_day ASC", rut_proveedor);
+
+  res = EjecutarSQL (q);
+  g_free (q);
+
+  if (res == NULL) return;
 
   tuples = PQntuples (res);
 
-  gtk_tree_store_clear (compra->store_facturas);
-
   for (i = 0; i < tuples; i++)
     {
-      if (atoi (PQgetvalue (res, i, 7)) > day || atoi (PQgetvalue (res, i, 8)) > month
-          || atoi (PQgetvalue (res, i, 9)) > year)
-        {
-          if (gtk_tree_store_iter_is_valid (compra->store_facturas, &fecha_iter) != FALSE)
-            {
-              gtk_tree_store_set (compra->store_facturas, &fecha_iter,
-                                  6, PutPoints (g_strdup_printf ("%d", monto_fecha)),
-                                  -1);
-              monto_fecha = 0;
-            }
-
-          day = atoi (PQgetvalue (res, i, 7));
-          month = atoi (PQgetvalue (res, i, 8));
-          year = atoi (PQgetvalue (res, i, 9));
-
-          gtk_tree_store_append (compra->store_facturas, &fecha_iter, NULL);
-          gtk_tree_store_set (compra->store_facturas, &fecha_iter,
-                              5, g_strdup_printf
-                              ("%.2d/%.2d/%.4d", atoi (PQgetvalue (res, i, 7)),
-                               atoi (PQgetvalue (res, i, 8)), atoi (PQgetvalue (res, i, 9))),
-                              -1);
-        }
-
-      gtk_tree_store_append (compra->store_facturas, &factura_iter, &fecha_iter);
-      gtk_tree_store_set (compra->store_facturas, &factura_iter,
-                          0, PQgetvalue (res, i, 11),
-                          1, PQgetvalue (res, i, 12),
-                          2, g_strdup_printf ("F. %s", PQgetvalue (res, i, 1)),
-                          3, strcmp (PQgetvalue (res, i, 6), "0") == 0 ? "" : PQgetvalue (res, i, 6),
-                          4, g_strdup_printf
-                          ("%.2d/%.2d/%.4d", atoi (PQgetvalue (res, i, 3)),
-                           atoi (PQgetvalue (res, i, 4)), atoi (PQgetvalue (res, i, 5))),
-                          5, atoi (PQgetvalue (res, i, 10)) != -1 ? g_strdup_printf
-                          ("%.2d/%.2d/%.4d", atoi (PQgetvalue (res, i, 7)), atoi (PQgetvalue (res, i, 8)),
-                           atoi (PQgetvalue (res, i, 9))) : "Contado",
-                          6, PutPoints (PQgetvalue (res, i, 2)),
+      gtk_list_store_append (store_invoice, &iter);
+      gtk_list_store_set (store_invoice, &iter,
+                          1, PQvaluebycol (res, i, "rut_proveedor"),
+                          2, PQvaluebycol (res, i, "num_factura"),
+                          3, PQvaluebycol (res, i, "id_compra"),
+                          4, g_strdup_printf ("%.2d/%.2d/%.4d", atoi (PQvaluebycol (res, i, "dia")),
+                                              atoi (PQvaluebycol (res, i, "mes")), atoi (PQvaluebycol (res, i, "ano"))),
+                          5, g_strdup_printf ("%.2d/%.2d/%.4d", atoi (PQvaluebycol (res, i, "pay_day")),
+                                              atoi (PQvaluebycol (res, i, "pay_month")), atoi (PQvaluebycol (res, i, "pay_year"))),
+                          6, PQvaluebycol (res, i, "monto"),
                           -1);
-
-      monto_fecha += atoi (PQgetvalue (res, i, 2));
-
-
-      res2 = EjecutarSQL
-        (g_strdup_printf
-         ("SELECT numero, id_compra, id, date_part ('day', fecha_emicion), "
-          "date_part ('month', fecha_emicion), date_part ('year', fecha_emicion), rut_proveedor FROM "
-          "guias_compra WHERE id_factura=%s", PQgetvalue (res, i, 0)));
-
-      tuples2 = PQntuples (res2);
-
-      if (tuples2 != 0)
-        {
-          for (j = 0; j < tuples2; j++)
-            {
-              gtk_tree_store_append (compra->store_facturas, &guia_iter, &factura_iter);
-              gtk_tree_store_set (compra->store_facturas, &guia_iter,
-                                  0, PQgetvalue (res2, j, 0),
-                                  1, PQgetvalue (res2, j, 6),
-                                  2, g_strdup_printf ("Guia %s", PQgetvalue (res2, j, 0)),
-                                  3, PQgetvalue (res2, j, 1),
-                                  4, g_strdup_printf
-                                  ("%.2d/%.2d/%.4d", atoi (PQgetvalue (res2, j, 3)),
-                                   atoi (PQgetvalue (res2, j, 4)), atoi (PQgetvalue (res2, j, 5))),
-                                  -1);
-            }
-        }
-    }
-  /*
-   * No sacar este trozo de codigo
-   */
-  if (gtk_tree_store_iter_is_valid (compra->store_facturas, &fecha_iter) != FALSE)
-    {
-      gtk_tree_store_set (compra->store_facturas, &fecha_iter,
-                          6, PutPoints (g_strdup_printf ("%d", monto_fecha)),
-                          -1);
-      monto_fecha = 0;
     }
 }
 
@@ -4267,7 +4339,7 @@ on_btn_ok_ingress_guide_clicked (GtkWidget *widget, gpointer data)
 }
 
 void
-on_entry_guide_invoice_activate (GtkEntry *entry, gpointer user_data)
+on_entry_guide_invoice_provider_activate (GtkEntry *entry, gpointer user_data)
 {
   GtkWindow *window;
   GtkTreeView *tree = GTK_TREE_VIEW (gtk_builder_get_object(builder, "tree_view_srch_provider"));;
@@ -4354,6 +4426,8 @@ on_btn_ok_srch_provider_clicked (GtkTreeView *tree)
   GtkTreeIter iter;
   gchar *str;
   gchar **strs;
+  gint tab = gtk_notebook_get_current_page ( GTK_NOTEBOOK (builder_get (builder, "buy_notebook")));
+  gboolean guide;
 
   if (gtk_tree_selection_get_selected (selection, NULL, &iter) == TRUE)
     {
@@ -4363,7 +4437,9 @@ on_btn_ok_srch_provider_clicked (GtkTreeView *tree)
 
       strs = g_strsplit (str, "-", 2);
 
-      FillProveedorData (*strs, TRUE);
+      guide = tab == 2 ? TRUE : FALSE;
+
+      FillProveedorData (*strs, guide);
 
       gtk_widget_hide (GTK_WIDGET (gtk_builder_get_object (builder, "wnd_srch_provider")));
     }
@@ -4596,5 +4672,55 @@ ClearFactData (void)
   gtk_entry_set_text (GTK_ENTRY (gtk_builder_get_object (builder, "entry_guide_invoice_n_invoice")), "");
   gtk_entry_set_text (GTK_ENTRY (gtk_builder_get_object (builder, "entry_guide_invoice_amount")), "");
 
-  //  gtk_window_set_focus (GTK_WINDOW (main_window), compra->fact_proveedor);
+}
+
+void
+on_entry_invoice_provider_activate (GtkEntry *entry, gpointer data)
+{
+  on_entry_guide_invoice_provider_activate (entry, data);
+}
+
+void
+on_tree_view_invoice_list_selection_changed (GtkTreeSelection *selection, gpointer data)
+{
+  gint i;
+  gchar *id_invoice;
+  gchar *q;
+  GtkTreeView *tree = GTK_TREE_VIEW (builder_get (builder, "tree_view_invoice_detail");
+  GtkTreeModel *model = gtk_tree_view_get_model (gtk_tree_selection_get_tree_view (selection));
+  GtkTreeIter iter;
+
+  PGresult *res;
+
+  if (gtk_tree_selection_get_selected (selection, NULL, &iter) == TRUE)
+    {
+      gtk_tree_model_get (model, &iter,
+                          0, &id_invoice,
+                          -1);
+
+      q = g_strdup_printf ("SELECT * FROM get_invoice_detail(%s)", id_invoice);
+      res = EjecutarSQL (q);
+      g_free (q);
+
+      if (res == NULL) return;
+
+      tuples = PQntuples (res);
+
+      model = gtk_tree_view_get_model (tree);
+      gtk_list_store_clear (GTK_LIST_STORE (model));
+
+      for (i = 0; i < tuples; i++)
+        {
+          gtk_list_store_append (GTK_LIST_STORE (model), &iter);
+          gtk_list_store_set (GTK_LIST_STORE (model), &iter,
+                              0, PQvaluebycol (res, i, "codigo_corto"),
+                              1, g_strdup_printf ("%s %s %s %s", PQvaluebycol (res, i, "descripcion"),
+                                                  PQvaluebycol (res, i, "marca"), PQvaluebycol (res, i, "contenido"),
+                                                  PQvaluebycol (res, i, "unidad")),
+                              2, PQvaluebycol(res, i, "precio"),
+                              3, strtod (PUT(PQvaluebycol(res, i, "cantidad")), (char **)NULL),
+                              4, (gdouble) (strtod (PUT(PQvaluebycol(res, i, "precio")), (char **)NULL) * strtod (PUT(PQvaluebycol(res, i, "cantidad")), (char **)NULL)),
+                              -1);
+        }
+    }
 }
