@@ -147,4 +147,6 @@ void ClosePagarDocumentoWin (GtkWidget *widget, gpointer data);
 
 void on_tree_selection_pending_guide_changed (GtkTreeSelection *selection, gpointer user_data);
 
+void on_tree_view_invoice_list_selection_changed (GtkTreeSelection *selection, gpointer data);
+
 #endif
